# nets

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  README_WINDOWS.md
app/analyzer/: Cargo.toml
app/analyzer/src/: dsl.rs  lib.rs
app/cli/: Cargo.toml
app/cli/src/: main.rs
app/collector/: Cargo.toml
app/collector/src/: lib.rs
app/collector/src/linux/: mod.rs
app/collector/src/mac/: mod.rs
app/collector/src/windows/: actions.rs  anomaly_detector.rs  mod.rs  network_monitor.rs  process_info.rs  protocol_detector.rs
app/normalizer/: Cargo.toml
app/normalizer/src/: lib.rs
app/policy/: Cargo.toml
app/policy/src/: lib.rs
app/storage/: Cargo.toml
app/storage/src/: lib.rs
app/ui/: Cargo.toml  README.md  STYLEGUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/ui/scripts/: check-locales.ts
app/ui/src/: App.tsx  main.rs  main.tsx  setup-i18n.ts
app/ui/src-tauri/: Cargo.toml  tauri.conf.json
app/ui/src-tauri/src/: commands.rs  main.rs  state.rs
app/ui/src-tauri/src/resources/: mock_alerts.json  mock_dns.json  mock_flows.json  mock_graph.json  mock_processes.json  mock_services.json  mock_settings.json  mock_status.json  mod.rs  sample.pcap.b64
app/ui/src/api/: client.ts
app/ui/src/components/: AlertsList.tsx  DnsView.tsx  FlowDetails.tsx  FlowsTable.tsx  GraphView.tsx  Header.tsx  LocalProtocolsView.tsx  ProcessesView.tsx  SettingsView.tsx  Sidebar.tsx  StatusBar.tsx
app/ui/src/components/__tests__/: Header.spec.tsx
app/ui/src/hooks/: useHotkeys.ts  useTypewriter.ts
app/ui/src/hooks/__tests__/: useTypewriter.spec.ts
app/ui/src/locales/en/: common.json
app/ui/src/locales/ru/: common.json
app/ui/src/mocks/: snapshot.ts
app/ui/src/styles/: app.css  global.css  tokens.ts
app/ui/src/types/: ui.ts
config/: config.toml
docs/: architecture.md  data-schemas.md  deployment-windows.md  dsl.md  test-plan.md  windows-features.md
docs/adr/: 0001-language.md  0002-ebpf.md  0003-windows.md  0004-storage.md
pkg/: Makefile
rules/: default.rules
scripts/: package-deb.sh  package-dmg.sh  package-msi.ps1  package-rpm.sh
tests/: anomaly_scenarios.sh  perf_cpu.sh  perf_memory.sh  quarantine.ps1  quarantine.sh  report.py  self_guard.sh
tests/pcap/: README.md
tools/: traffic_gen.py
