[package]
name = "analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Behavior baselining and anomaly detection"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
chrono.workspace = true
normalizer = { path = "../normalizer" }
collector = { path = "../collector" }
