[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Administrative CLI for Local Monitoring"

[[bin]]
name = "nets-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
collector = { path = "../collector" }
normalizer = { path = "../normalizer" }
analyzer = { path = "../analyzer" }
policy = { path = "../policy" }
storage = { path = "../storage" }
chrono.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
