[package]
name = "collector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OS-specific packet and flow collectors for Local Monitoring"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tokio.workspace = true
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
] }
wmi = "0.13"
winreg = "0.52"
