[package]
name = "collector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OS-specific packet and flow collectors for Local Monitoring"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tokio.workspace = true
ring.workspace = true
hex.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_IpHelper",
] }
