[package]
name = "collector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OS-specific packet and flow collectors for Local Monitoring"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Networking_WinSock",
    "Win32_Networking_NetworkListManager",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
sha2 = "0.10"
hex.workspace = true
