[package]
name = "normalizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Flow normalization and aggregation"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
collector = { path = "../collector" }
