[package]
name = "policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local response actions and quarantine management"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
collector = { path = "../collector" }
analyzer = { path = "../analyzer" }
