[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Encrypted SQLite storage layer"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
ring.workspace = true
chrono.workspace = true
collector = { path = "../collector" }
analyzer = { path = "../analyzer" }
serde_json.workspace = true
