[package]
name = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop UI prototypes"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
analyzer = { path = "../analyzer" }
collector = { path = "../collector" }
normalizer = { path = "../normalizer" }
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
