[package]
name = "nets-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri shell for offline network monitoring UI"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
collector = { path = "../../collector" }
analyzer = { path = "../../analyzer" }
normalizer = { path = "../../normalizer" }
thiserror.workspace = true
once_cell = "1.18"
parking_lot.workspace = true
dirs = "5.0"
base64.workspace = true
chrono.workspace = true
futures.workspace = true
storage = { path = "../../storage" }
rand = { version = "0.8", features = ["std"] }
policy = { path = "../../policy" }

tauri = { version = "2.4.1", features = ["wry"] }

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = []
